# pr7

./: CMakeLists.txt  README.md
files/: 003.txt  005.txt  007.txt  009.txt  010.txt  011.txt  012.txt  013.txt  014.txt  015.txt  019.txt  020.txt  022.txt  024.txt  026.txt  027.txt  030.txt  032.txt  033.txt  035.txt  036.txt  037.txt  039.txt  042.txt  043.txt  045.txt  047.txt  048.txt  052.txt  054.txt  055.txt  057.txt  058.txt  059.txt  060.txt  061.txt  062.txt  063.txt  064.txt  065.txt  (+3 more)
files/.hidden_dir/: 067.txt  068.txt  069.txt  070.txt  071.txt  072.txt  073.txt  075.txt
files/temp_dir/: 050.txt  051.txt  053.txt  056.txt
files/temp_dir/another_dir/: 018.txt  021.txt  023.txt  025.txt  028.txt  029.txt  031.txt
files/temp_dir/another_dir/deep_dir/: 001.txt  002.txt  004.txt  006.txt  008.txt  016.txt  017.txt
files/temp_dir/yet_another_dir/: 034.txt  038.txt  040.txt  041.txt  044.txt  046.txt  049.txt
src/: WS.c  wordsearch.c
